logs/cythereal-vbsdk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cythereal_vbsdk-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/validate_email-1.3.egg-info'...
Listing './lib/python3.5/site-packages/vbsdk'...
Listing './lib/python3.5/site-packages/vbsdk/actions'...
Listing './lib/python3.5/site-packages/vbsdk/actions/processors'...
Compiling './lib/python3.5/site-packages/vbsdk/actions/processors/query.py'...
***   File "./lib/python3.5/site-packages/vbsdk/actions/processors/query.py", line 59
    print repr(e)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vbsdk/actions/processors/search.py'...
***   File "./lib/python3.5/site-packages/vbsdk/actions/processors/search.py", line 78
    print repr(e)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vbsdk/actions/visitors'...
Compiling './lib/python3.5/site-packages/vbsdk/actions/visitors/progressMonitor.py'...
***   File "./lib/python3.5/site-packages/vbsdk/actions/visitors/progressMonitor.py", line 37
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vbsdk/actions/visitors/query.py'...
***   File "./lib/python3.5/site-packages/vbsdk/actions/visitors/query.py", line 15
    print '['
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vbsdk/actions/visitors/query2file.py'...
***   File "./lib/python3.5/site-packages/vbsdk/actions/visitors/query2file.py", line 18
    print ']'
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vbsdk/progress.py'...
***   File "./lib/python3.5/site-packages/vbsdk/progress.py", line 18
    print str(datetime.now()), message
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vbsdk/vbBase'...
Compiling './lib/python3.5/site-packages/vbsdk/vbBase/vbBase.py'...
***   File "./lib/python3.5/site-packages/vbsdk/vbBase/vbBase.py", line 196
    print repr(e)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vbsdk/vbregister.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (vbregister.py, line 18)
Compiling './lib/python3.5/site-packages/vbsdk/vbsdk.py'...
***   File "./lib/python3.5/site-packages/vbsdk/vbsdk.py", line 29
    print "Output is in file: %s" % uploadfile
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
